metadata/force-app/main/default/objects/CustomName_LlJqI__c/CustomName_LlJqI__c.object-meta.xml
<CustomObject>
    <description>Description_TjlOd</description>
    <label>CustomLabel_bNmKm</label>
    <nameField>
        <label>CustomLabel_bNmKm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_bNmKms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>