metadata/force-app/main/default/objects/CustomName_LlJqI__c/fields/CustomField_GfSgH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GfSgH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldBzRWN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>