metadata/force-app/main/default/objects/CustomName_LlJqI__c/fields/CustomField_KYUAw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KYUAw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgwjIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>